# LibreSAGE

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codecov.yml  vcpkg-configuration.json  vcpkg.json
Common/: CMakeLists.txt
Common/Compat/: CMakeLists.txt  compat.h  d3dx8core.h  d3dx8math.h  d3dx8tex.cpp  d3dx8tex.h  d3dx9.h  d3dx9core.cpp  d3dx9core.h  d3dx9math.cpp  d3dx9math.h  d3dx9tex.cpp  d3dx9tex.h  intrin_compat.h  memory_compat.h  osdep.h  string_compat.h  tchar.h  thread_compat.h  time_compat.cpp  time_compat.h  wchar_compat.h  windows.h
Common/GameEngine/: CMakeLists.txt
Common/GameEngine/Include/Common/: ArchiveFile.h  ArchiveFileSystem.h  AsciiString.h  AudioAffect.h  AudioEventInfo.h  AudioEventRTS.h  AudioHandleSpecialValues.h  AudioRandomValue.h  AudioRequest.h  AudioSettings.h  BezFwdIterator.h  BezierSegment.h  BitFlags.h  BitFlagsIO.h  BorderColors.h  CDManager.h  CRC.h  CRCDebug.h  ClientUpdateModule.h  CommandLine.h  CopyProtection.h  CriticalSection.h  DamageFX.h  Debug.h  Dict.h  Directory.h  DisabledTypes.h  DiscreteCircle.h  Encrypt.h  Energy.h  Errors.h  File.h  FileSystem.h  FunctionLexicon.h  GameAudio.h  GameCommon.h  GameEngine.h  GameMemory.h  GameMusic.h  GameSounds.h  (+69 more)
Common/GameEngine/Include/GameClient/: Anim2D.h  CDCheck.h  ClientRandomValue.h  Color.h  ControlBarResizer.h  Credits.h  DebugDisplay.h  Diplomacy.h  DisconnectMenu.h  DisplayString.h  DisplayStringManager.h  DrawGroupInfo.h  DrawableInfo.h  DrawableManager.h  EstablishConnectionsMenu.h  ExtendedMessageBox.h  FXList.h  FontDesc.h  GUICommandTranslator.h  GadgetCheckBox.h  GadgetComboBox.h  GadgetListBox.h  GadgetProgressBar.h  GadgetPushButton.h  GadgetRadioButton.h  GadgetSlider.h  GadgetStaticText.h  GadgetTabControl.h  GadgetTextEntry.h  GameFont.h  GameInfoWindow.h  GameText.h  GameWindow.h  GameWindowGlobal.h  GameWindowID.h  GameWindowManager.h  GameWindowTransitions.h  (+34 more)
Common/GameEngineDevice/: CMakeLists.txt
Common/Libraries/: CMakeLists.txt
Common/Tests/: CMakeLists.txt  lsan.supp
Common/Tests/Apt/: AptTest.cpp  CMakeLists.txt
Common/Tests/Compression/: CMakeLists.txt  CompressionTest.cpp
Common/Tests/Data/: b.big
Common/Tests/GameEngine/: CMakeLists.txt  MainStub.cpp
Common/Tests/GameEngineDevice/: CMakeLists.txt  MainStub.cpp
Common/Tests/Stub/: CMakeLists.txt  gamestub.cpp
Common/Tests/WWVegas/: CMakeLists.txt
Common/Tools/: CMakeLists.txt
Common/Tools/AptViewer/: AptAuxSDLGPU.cpp  AptAuxSDLGPU.h  AptViewer.cpp  CMakeLists.txt  SDLGPURenderer.cpp  SDLGPURenderer.h
Common/Tools/CRCDiff/: CMakeLists.txt  CRCDiff.cpp  KVPair.cpp  KVPair.h  debug.cpp  debug.h  expander.cpp  expander.h  misc.h
Common/Tools/Compress/: CMakeLists.txt  Compress.cpp
Common/Tools/DebugWindow/: CMakeLists.txt  DebugWindow.cpp  DebugWindowDialog.cpp  DebugWindowDialog.h  DebugWindowDialog.ui  DebugWindowExport.h
Common/Tools/ImagePacker/: CMakeLists.txt  ImageDirectory.h  ImageInfo.cpp  ImageInfo.h  ImagePacker.cpp  ImagePacker.h  ImagePackerWindow.cpp  ImagePackerWindow.h  ImagePackerWindow.ui  Main.cpp  PreviewWindow.cpp  PreviewWindow.h  TexturePage.cpp  TexturePage.h
Common/Tools/Launcher/: CMakeLists.txt  GameCatalog.h  GameCatalogModel.cpp  GameCatalogModel.h  GameLauncher.cpp  GameLauncher.h  Installation.cpp  Installation.h  InstallationFinder.cpp  InstallationFinder.h  InstallationModel.cpp  InstallationModel.h  LauncherConfig.cpp  LauncherConfig.h  Main.cpp  SteamCmdManager.cpp  SteamCmdManager.h
Common/Tools/ParticleEditor/: CButtonShowColor.cpp  CButtonShowColor.h  CColorAlphaDialog.cpp  CColorAlphaDialog.h  CColorAlphaDialog.ui  CMakeLists.txt  CSwitchesDialog.cpp  CSwitchesDialog.h  CSwitchesDialog.ui  EmissionPanelBox.ui  EmissionPanelCylinder.ui  EmissionPanelLine.ui  EmissionPanelPoint.ui  EmissionPanelSphere.ui  EmissionTypePanels.cpp  EmissionTypePanels.h  ISwapablePanel.cpp  ISwapablePanel.h  MoreParmsDialog.cpp  MoreParmsDialog.h  MoreParmsDialog.ui  ParticleEditor.cpp  ParticleEditorDialog.cpp  ParticleEditorDialog.h  ParticleEditorDialog.ui  ParticleEditorExport.h  ParticlePanelDrawable.ui  ParticlePanelParticle.ui  ParticlePanelStreak.ui  ParticleTypePanels.cpp  ParticleTypePanels.h  VelocityPanelCylinder.ui  VelocityPanelHemisphere.ui  VelocityPanelOrtho.ui  VelocityPanelOutward.ui  VelocityPanelSphere.ui  VelocityTypePanels.cpp  VelocityTypePanels.h
Common/Tools/W3DView/: CMakeLists.txt  animationtoolbar.cpp  animationtoolbar.h  assetinfo.cpp  assetinfo.h  datatreemodel.cpp  datatreemodel.h  globals.cpp  globals.h  graphicview.cpp  graphicview.h  loddefs.h  qfilewrapper.cpp  qfilewrapper.h  qsdlwindow.cpp  utils.cpp  utils.h  viewerassetmgr.cpp  viewerassetmgr.h  viewerscene.cpp  viewerscene.h  w3dview.cpp  w3dview.h  w3dviewdoc.cpp  w3dviewdoc.h  w3dviewwin.cpp  w3dviewwin.h  w3dviewwin.ui
Common/Tools/WWQt6/: CMakeLists.txt  qsdlwindow.h
Common/Tools/buildVersionUpdate/: buildVersionUpdate.cpp
Common/Tools/versionUpdate/: versionUpdate.cpp
Common/Tools/wdump/: CMakeLists.txt  chunk_d.cpp  wdump.cpp  wdumpwin.cpp  wdumpwin.h  wdumpwin.ui
Generals/Tests/: CMakeLists.txt
Generals/Tests/GameEngine/: CMakeLists.txt
Generals/Tests/GameEngineDevice/: CMakeLists.txt
GeneralsMD/: CMakeLists.txt
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Main/: CMakeLists.txt
GeneralsMD/GameEngine/: CMakeLists.txt
GeneralsMD/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Main/: CMakeLists.txt  SDL3Main.cpp  WinMain.cpp  WinMain.h
GeneralsMD/Tests/: CMakeLists.txt
GeneralsMD/Tests/GameEngine/: CMakeLists.txt
GeneralsMD/Tests/GameEngineDevice/: CMakeLists.txt  MainStub.cpp
GeneralsMD/Tools/: CMakeLists.txt
GeneralsMD/Tools/Autorun/: GETCD.CPP  WSYS_File.cpp  arrow.cur  autorun.cpp
GeneralsMD/Tools/Babylon/: Babylon.cpp
GeneralsMD/Tools/PATCHGET/: debug.cpp
GeneralsMD/Tools/WorldBuilder/: CMakeLists.txt
GeneralsMD/Tools/matchbot/: encrypt.cpp
GeneralsMD/Tools/timingTest/: timingTest.cpp
(+3483 files in other folders)
