cmake_minimum_required(VERSION 3.23)
project(RTS LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    # The game expects that string literals are merged. So same content should have the same address
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -fmerge-constants -fno-char8_t -Wno-invalid-offsetof")
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:char8_t-")
endif()

# Options
option(SAGE_BUILD_TOOLS "Build tools" ON)
option(SAGE_BUILD_TESTS "Build unit tests" OFF)
option(SAGE_WITH_COVERAGE "Build with code coverage support" OFF)
option(SAGE_WITH_ASAN "Build with AddressSanitizer" OFF)
option(SAGE_WITH_UBSAN "Build with UndefinedBehaviorSanitizer" OFF)
option(SAGE_WITH_CLANG_TIDY "Enable clang-tidy static analysis" OFF)

if(SAGE_WITH_CLANG_TIDY)
    message(STATUS "Clang-Tidy support enabled")
    find_program (CLANG_TIDY clang-tidy)
    if(CLANG_TIDY)
        set(CLANG_TIDY_CHECKS "-*,performance-*,bugprone-suspicious-*")
        set(CMAKE_C_CLANG_TIDY "${CLANG_TIDY};-checks=${CLANG_TIDY_CHECKS};-header-filter='${CMAKE_SOURCE_DIR}/*")
        set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY};-checks=${CLANG_TIDY_CHECKS};-header-filter='${CMAKE_SOURCE_DIR}/*")
    endif()
endif()

if(SAGE_WITH_COVERAGE)
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -coverage")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -coverage")
    else()
        message(WARNING "Code coverage is only supported with Clang and GCC.")
    endif()
endif()

if(SAGE_WITH_ASAN)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
    set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
endif()

if(SAGE_WITH_UBSAN)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
    set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fsanitize=undefined")
endif()

if(SAGE_BUILD_TESTS)
    enable_testing()
endif()

# Dependency options
option(SAGE_USE_GLM "Use GLM for math operations" ON)
option(SAGE_USE_MILES "Use Miles Sound System for audio" OFF)
option(SAGE_USE_MINIAUDIO "Use Miniaudio for audio playback" ON)
option(SAGE_USE_FFMPEG "Use FFmpeg for audio & video decoding" ON)
option(SAGE_USE_BINK "Use Bink for video playback" OFF)
option(SAGE_USE_SDL3 "Use SDL3 for input handling" ON)
option(SAGE_USE_FREETYPE "Use FreeType for font rendering" ON)
option(SAGE_USE_FONTCONFIG "Use Fontconfig for font management" ON)

include(FeatureSummary)
add_feature_info(GLM SAGE_USE_GLM "Use GLM for math operations")
add_feature_info(Miles SAGE_USE_MILES "Use Miles Sound System for audio")
add_feature_info(Miniaudio SAGE_USE_MINIAUDIO "Use Miniaudio for audio playback")
add_feature_info(FFmpeg SAGE_USE_FFMPEG "Use FFmpeg for audio & video decoding")
add_feature_info(Bink SAGE_USE_BINK "Use Bink for video playback")
add_feature_info(SDL3 SAGE_USE_SDL3 "Use SDL3 for input handling")
add_feature_info(FreeType SAGE_USE_FREETYPE "Use FreeType for font rendering")
add_feature_info(Fontconfig SAGE_USE_FONTCONFIG "Use Fontconfig for font management")
feature_summary(WHAT ALL)

add_subdirectory(Common)
add_subdirectory(Generals/Code)
add_subdirectory(GeneralsMD/Code)